    - patch "ss" tool to output congestion control state for BBRv3
    - patch "ip" tool to support ecn_low per-route feature
    - patch "ss" tool to show "ecn_low" state in TCP socket
    Note these are only useful on a BBRv3-enabled Linux kernel!
  * Change qosmode=2 behaviour: treat incoming CE-marked packets also
    as L4S, for consistency with LLD (i.e. L4S-enabled DOCSIS)

 -- Thorsten Glaser <t.glaser@tarent.de>  Wed, 13 Sep 2023 17:29:32 +0200

iproute2 (5.10.0-4jens23) tarent; urgency=low

  * Rename package to iproute2-jens and iproute2-jens-doc
    for easier installation on Debian bookworm, etc.
    (ofc with versioned Provides of the old names)
  * iproute2-jens Recommends sch-jens-dkms
  * Distinguish bullseye/focal builds via Pre-Depends
  * Version iproute-janz Provides on ${source:Version}

 -- Thorsten Glaser <t.glaser@tarent.de>  Sun, 27 Aug 2023 23:00:24 +0200

iproute2 (5.10.0-4jens22) tarent; urgency=medium

  * Fix installation compiling from package

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 17 Aug 2023 17:33:29 +0200

iproute2 (5.10.0-4jens21) tarent; urgency=medium

  * Improve quality of stochastics
  * Make LKMs compatible with Linux 6.4
  * Improve qosmode-related documentation, incorporating field xp
  * Better error reporting at configure time
  * Improve qsz reporting scheduling
  * On PREEMPT_DYNAMIC kernels suggest preempt=none for boot cmdline
  * Don’t backdate packets to before they arrived
  * Fix some bw rate conversions
  * Limit extralatency to 2 seconds
  * Return to full nanosecond precision internally
  * Use qdisc_pkt_len to guess at wire size
  * Change TC_JANZ_RELAY_QUEUESZ.d32 to qdisc length in (wire) octets

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 17 Aug 2023 17:16:50 +0200

iproute2 (5.10.0-4jens20) tarent; urgency=low

  * Install qdisc operation documentation
  * Add experimental sch_multijens qdisc and mratedemo
  * Improve documentation
  * Small reliability improvement in initialisation code
