@@ -115,14 +115,7 @@ Record types define the following data members:
 
 • TC_JANZ_RELAY_SOJOURN:
   – d32 packet sojourn time in 1024 ns units
-  – e16 ECN marking range/percentage
-    ‣ 0xFFFF = above or equal to markfull
-    ‣ 0x0000 = below or equal to markfree
-    ‣ anything in between = relative value of chance of marking
-      (this currently scales linearly based on the sojourn time
-      but may in the future use a gradual approach); note roun‐
-      ding may make the chance 0x0000 or 0xFFFF if sojourn time
-      is near markfree or markfull, respectively
+  – e16 currently unused, reassigned soon
   – f8 bitfield
     ‣ 0:1 ECN bits on enqueue
     ‣   2 ECN bits are valid (0 if they could not be determined)
